# study_timelapse

./: .gitignore  API.md  CLAUDE.md  PRD.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_users_sessions_daily_focus_tables.py
backend/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/api/v1/: auth.py  router.py  sessions.py  stats.py  timelapse.py  upload.py  users.py
backend/app/models/: __init__.py  base.py  daily_focus.py  session.py  user.py
backend/app/schemas/: auth.py  common.py  session.py  stats.py  timelapse.py  upload.py  user.py
backend/app/services/: auth_service.py  jwt_service.py  timelapse_service.py  upload_service.py
backend/tests/: conftest.py
backend/tests/api/: test_timelapse_api.py  test_upload_api.py
docs/: PRD_mobile.md
frontend/: app.json  package-lock.json  package.json
frontend/mobile/: CLAUDE.md  README.md  app.json  babel.config.js  eas.json  package.json
frontend/mobile/app/: _layout.tsx  focus.tsx  generating.tsx  index.tsx  login.tsx  paywall.tsx  processing.tsx  result.tsx  saving.tsx  session-setup.tsx  settings.tsx  stats.tsx
frontend/mobile/modules/timelapse-creator/: expo-module.config.json  index.ts
frontend/web/: CLAUDE.md  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/web/src/: App.tsx  index.css
scripts/: deploy.sh
(+26 files in other folders)
