[project]
name = "study_timelapse"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.18",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]
sqlite = ["aiosqlite>=0.20"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = [
    "N815",   # camelCase in Pydantic schemas (API 호환)
    "B008",   # FastAPI Depends/Query in argument defaults (FastAPI 패턴)
]

[tool.ruff.lint.per-file-ignores]
"app/schemas/*" = ["N815"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
